<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/textViewCorrectCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="1"
        android:textColor="@color/green"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewAllCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="2"
            android:textColor="@color/grey"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textViewPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="3"
            android:textColor="@color/grey"
            android:textSize="25sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewIncorrectCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="4"
        android:textColor="@color/red"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="textView"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/textViewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="textViewTask"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonNumber1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/red"
                android:text="@string/buttonNumber1"
                android:textSize="25sp"
                app:cornerRadius="12dp" />

            <Button
                android:id="@+id/buttonNumber2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/red"
                android:text="@string/buttonNumber2"
                android:textSize="25sp"
                app:cornerRadius="12dp" />

            <Button
                android:id="@+id/buttonNumber3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/red"
                android:text="@string/buttonNumber3"
                android:textSize="25sp"
                app:cornerRadius="12dp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonNumber4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/red"
                android:text="@string/buttonNumber4"
                android:textSize="25sp"
                app:cornerRadius="12dp" />

            <Button
                android:id="@+id/buttonNumber5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/red"
                android:text="@string/buttonNumber5"
                android:textSize="25sp"
                app:cornerRadius="12dp" />

            <Button
                android:id="@+id/buttonNumber6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/red"
                android:text="@string/buttonNumber6"
                android:textSize="25sp"
                app:cornerRadius="12dp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonNumber7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/red"
                android:text="@string/buttonNumber7"
                android:textSize="25sp"
                app:cornerRadius="12dp" />

            <Button
                android:id="@+id/buttonNumber8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/red"
                android:text="@string/buttonNumber8"
                android:textSize="25sp"
                app:cornerRadius="12dp" />

            <Button
                android:id="@+id/buttonNumber9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/red"
                android:text="@string/buttonNumber9"
                android:textSize="25sp"
                app:cornerRadius="12dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/darkPurple"
                android:text="@string/buttonDelete"
                android:textSize="25sp"
                app:cornerRadius="12dp" />

            <Button
                android:id="@+id/buttonNumber0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/red"
                android:text="@string/buttonNumber0"
                android:textSize="25sp"
                app:cornerRadius="12dp" />

            <Button
                android:id="@+id/buttonResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/darkPurple"
                android:text="@string/buttonResult"
                android:textSize="25sp"
                app:cornerRadius="12dp" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>